[gd_scene load_steps=7 format=3 uid="uid://cg0dpkfqho8xs"]

[ext_resource type="Script" path="res://Scripts/CEF.gd" id="1_j4gvw"]
[ext_resource type="Shader" path="res://Shaders/Blur.gdshader" id="2_qqkxj"]
[ext_resource type="PackedScene" uid="uid://scu3pvp6we0w" path="res://Scenes/TabsOverlay.tscn" id="3_fpfdj"]
[ext_resource type="PackedScene" uid="uid://bqc4y2g8862jh" path="res://Scenes/SearchBar.tscn" id="5_i6ar6"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_gxtfe"]
shader = ExtResource("2_qqkxj")
shader_parameter/exclude_center = null
shader_parameter/exclude_size = null
shader_parameter/lod = 1.5

[sub_resource type="Environment" id="Environment_uw372"]
background_mode = 3
glow_enabled = true
glow_strength = 0.49
glow_blend_mode = 1

[node name="GUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_j4gvw")

[node name="CEF" type="GDCef" parent="."]

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="Panel/VBox"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 0
expand_mode = 1
stretch_mode = 3

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="AcceptDialog" type="AcceptDialog" parent="."]

[node name="BlurOverlay" type="ColorRect" parent="."]
visible = false
material = SubResource("ShaderMaterial_gxtfe")
layout_mode = 0
offset_right = 1148.0
offset_bottom = 654.0

[node name="ColorOverlay" type="ColorRect" parent="BlurOverlay"]
layout_mode = 0
offset_right = 1156.0
offset_bottom = 654.0
color = Color(0, 0, 0, 0.498039)

[node name="TabsOverlay" parent="." instance=ExtResource("3_fpfdj")]
visible = false
layout_mode = 0
offset_right = 1169.0
offset_bottom = 653.0

[node name="SearchBar" parent="." instance=ExtResource("5_i6ar6")]
visible = false
offset_left = 337.0
offset_top = 271.0
offset_right = 840.0
offset_bottom = 340.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_uw372")

[connection signal="gui_input" from="Panel/VBox/TextureRect" to="." method="_on_TextureRect_gui_input"]
[connection signal="resized" from="Panel/VBox/TextureRect" to="." method="_on_texture_rect_resized"]
